fix garden league nickname